crates/uselesskey/tests/snapshots/snapshots_facade__facade_rsa_4096_metadata.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: result
---
label: facade-rsa-4096
algorithm: RS256-4096
private_pem:
  first_line: "-----BEGIN PRIVATE KEY-----"
  last_line: "-----END PRIVATE KEY-----"
  line_count: 52
public_pem:
  first_line: "-----BEGIN PUBLIC KEY-----"
  last_line: "-----END PUBLIC KEY-----"
  line_count: 14
private_der_len: 2375
public_der_len: 550
