crates/uselesskey/tests/snapshots/snapshots_facade__facade_rsa_jwk_shape.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: result
---
kty: RSA
alg: RS256
use_field: sig
has_kid: true
kid_not_empty: true
