crates/uselesskey/tests/snapshots/snapshots_facade__facade_token_bearer.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: result
---
kind: bearer
value_len: 43
auth_header_scheme: Bearer
