crates/uselesskey/tests/snapshots/snapshots_facade__facade_truncated_der.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: result
---
original_der_len: 1219
truncated_len: 10
is_shorter: true
