crates/uselesskey/tests/snapshots/snapshots_facade__facade_x509_cert_shapes.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: result
---
cert_pem:
  first_line: "-----BEGIN CERTIFICATE-----"
  last_line: "-----END CERTIFICATE-----"
  line_count: "[VOLATILE]"
private_key_pem:
  first_line: "-----BEGIN PRIVATE KEY-----"
  last_line: "-----END PRIVATE KEY-----"
  line_count: "[VOLATILE]"
cert_der_len: "[VOLATILE]"
private_key_der_len: "[VOLATILE]"
